# Power-yaw-exponent-example

./: .gitignore  pyproject.toml  readme.md
data/: place-the-data-set-here.txt
src/: dataset.py  lib.py  process_dataset.py
