[tool.poetry]
name = "power-yaw-exponent-example"
version = "0.1.0"
description = ""
authors = ["Jaime <jaimeliew1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.16.5"
scipy = "^1.6"
matplotlib = "^3.5.2"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
ipython = "7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
